; ModuleID = '/home/carl/AnghaBench/zfs/cmd/zed/extr_zed_conf.c_zed_conf_parse_file.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/zed/extr_zed_conf.c_zed_conf_parse_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zed_conf = type { i32 }

@.str = private unnamed_addr constant [27 x i8] c"Failed to parse config: %s\00", align 1
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zed_conf_parse_file(%struct.zed_conf* %0) #0 {
  %2 = alloca %struct.zed_conf*, align 8
  store %struct.zed_conf* %0, %struct.zed_conf** %2, align 8
  %3 = load %struct.zed_conf*, %struct.zed_conf** %2, align 8
  %4 = icmp ne %struct.zed_conf* %3, null
  br i1 %4, label %9, label %5

5:                                                ; preds = %1
  %6 = load i32, i32* @EINVAL, align 4
  %7 = call i32 @strerror(i32 %6)
  %8 = call i32 @zed_log_die(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %7)
  br label %9

9:                                                ; preds = %5, %1
  ret void
}

declare dso_local i32 @zed_log_die(i8*, i32) #1

declare dso_local i32 @strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
